<resources>
    <string name="app_name">Travel Partner</string>
    <string name="email_form_hint">Email</string>
    <string name="password_form_hint">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="or_txt">Or</string>
    <string name="register_btn_txt">Register</string>
    <string name="username_form_hint">Username</string>
    <string name="title_activity_maps">Map</string>
    <string name="fab_food_desc">food floating action button</string>
    <string name="fab_store_desc">store floating action button</string>
    <string name="list_btn_txt">Popular Places</string>
    <string name="account_icon">Account</string>
    <string name="place_name">Place Name</string>
    <string name="img_photo_desc">image of place</string>
    <string name="search_icon_txt">Search Icon</string>
    <string name="welcome_txt">Welcome to Travel Partner</string>
    <string name="logo_desc">this is image of logo</string>
    <string name="place_contact">place contact</string>
    <string name="img_call_desc">this is call icon</string>
    <string name="create_account_txt">Create Account</string>
    <string name="username">Username</string>
</resources>